Use a fixed font size on mobile
Allows for Safari iOS to zoom text properly, at least, and just makes
things more readable in general

--- a/src/interpreter/html/style.css
+++ b/src/interpreter/html/style.css
@@ -237,7 +237,11 @@ td[class|="y"] {
   }
 
   td {
-    height: 2.5em;
+    height: 2.5rem;
+  }
+
+  td:nth-child(n+2) {
+    font-size: 15px;
   }
 
   th:nth-child(n+6),
